--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <version>1.2.35</version>
         </dependency>
 
+        <!-- 获取多个配置参数 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
