--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,3 +6,37 @@ logging:
   level:
     com.feifei.springboot.dao: trace #线上error或debug
 
+# 数据库地址
+datasource:
+  url: localhost:3306/test
+
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://${datasource.url}?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+    username: root
+    password: 123456
+    ######################### Druid连接池的配置信息  #################
+    spring.druid.initialSize: 5                                 #初始化连接大小
+    spring.druid.minIdle: 5                                     #最小连接池数量
+    spring.druid.maxActive: 20                                  #最大连接池数量
+    spring.druid.maxWait: 60000                                 #获取连接时最大等待时间，单位毫秒
+    spring.druid.timeBetweenEvictionRunsMillis: 60000           #配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+    spring.druid.minEvictableIdleTimeMillis: 300000             #配置一个连接在池中最小生存的时间，单位是毫秒
+    spring.druid.validationQuery: SELECT 1 FROM DUAL            #测试连接
+    spring.druid.testWhileIdle: true                            #申请连接的时候检测，建议配置为true，不影响性能，并且保证安全性
+    spring.druid.testOnBorrow: false                            #获取连接时执行检测，建议关闭，影响性能
+    spring.druid.testOnReturn: false                            #归还连接时执行检测，建议关闭，影响性能
+    spring.druid.poolPreparedStatements: false                  #是否开启PSCache，PSCache对支持游标的数据库性能提升巨大，oracle建议开启，mysql下建议关闭
+    spring.druid.maxPoolPreparedStatementPerConnectionSize: 20  #开启poolPreparedStatements后生效
+    spring.druid.filters: stat,wall,log4j                       #配置扩展插件，常用的插件有=>stat:监控统计  log4j:日志  wall:防御sql注入
+    spring.druid.connectionProperties: 'druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000'
+
+mybatis:
+  # 指定别名设置的包为所有entity
+  type-aliases-package: com.feifei.springboot.entity
+  configuration:
+    map-underscore-to-camel-case: true # 驼峰命名规范
+  mapper-locations: # mapper映射文件位置
+    - classpath:mapper/*.xml
